hphp/hack/test/sound_dynamic/typing/nonenforceable_property.bad.php.exp
File "nonenforceable_property.bad.php", line 10, characters 5-29:
Invalid assignment (Typing[4110])
  File "nonenforceable_property.bad.php", line 5, characters 12-19:
  Expected `vec<int>`
  File "nonenforceable_property.bad.php", line 7, characters 56-57:
  But got `dynamic`
